--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Social Media Marketing Website</title>
+    <title>Horiseon Social Media Marketing</title>
 </head>
 
 <body>
@@ -24,24 +24,24 @@
             </ul>
         </nav>
     </header>
-    <section class="hero" alt="an image of a marketing meeting between 4 peers"></section>
+    <section class="hero" alt="an image of a marketing meeting between four peers"></section>
     <main class="content">
         <section class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="an image of a desk with a notebook on it that says SEO on it standing for search engine Optimization" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="an image of a desk with a notebook on it that says SEO, standing for Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="an image of a man working on a laptop witch has a picture of a graph trending upward with the word reputation above it " class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="an image of a man working on a laptop which has a picture of a graph trending upward with the word reputation above it" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="an image of a meating table coverd in social midia icons and sayings" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="an image of a meeting table covered in social media icons and sayings" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -65,7 +65,7 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="image of a gear with 3 money symbols" />
+            <img src="./assets/images/cost-management.png" alt="image of a gear with three money symbols" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
